# BSDCoreUtils

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.in  README.md  TODO  TRADEOFFS  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  import-src.sh  libtool
compat/: CMakeLists.txt  Makefile.am  compat.h  darwinlogwtmpx.c  devname.c  devname.c.orig  fmt_scaled.c  getbsize.c  heapsort.c  logwtmp.c  merge.c  ohash.c  pwcache.c  reallocarray.c  recallocarray.c  setmode.c  strmode.c  strtonum.c
compat/common/: getbsize.c  progname.c  pwcache.c
compat/darwin/: reallocarray.c
compat/headers/: mthio.h
compat/include/: compat.h  tree.h
compat/linux/: strlcat.c
compat/src/: compat.h  devname.c  devname_mingw.c  explicit_bzero.c  fmt_scaled.c  getbsize.c  heapsort.c  merge.c  ohash.c  ohash.h  paths_mingw.h  posixver.h  pwcache.c  reallocarray.c  recallocarray.c  setmode.c  simpleq.h  strlcat.c  strlcpy.c  strmode.c  strtonum.c  strtoul.c  tree.h  tsymstruct.h
compat/win32/: compat_mingw.h  err_translate.c
libcompleteme/: CMakeLists.txt
libcompleteme/src/: convert.c  convert.h  dev_opera.c  dev_opera.h  first_component.c  first_component.h  is_prefixed_with.c  is_prefixed_with.h  is_symlink.c  is_symlink.h  istests.c  istests.h  linked_strings.c  linked_strings.h  starts_with.c  starts_with.h  timeoperations.c  timeoperations.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  arch.c  chroot.c  cp.c  csplit.c  date.c  dirname.c  expr.c  fold.c  ln.c  mkdir.c  mknod.c  mktemp.c  printf.c  sort.c  split.c  touch.c  tsort.c  uname.c
src/arch/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  arch  arch.c
src/basename/: CMakeLists.txt  Makefile  Makefile.in  basename  basename.c  basename.c.orig
src/bsdvers/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bsdvers  bsdvers.c  colors.h
src/cat/: CMakeLists.txt  Makefile  Makefile.in  cat  cat.c
src/chmod/: CMakeLists.txt  Makefile  Makefile.in  chmod  chmod.c  chmod.c.orig
src/chroot/: CMakeLists.txt  Makefile  Makefile.in  chroot  chroot.c
src/colorls/: Makefile.am  colorls  ls.c  print.c
src/comm/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  comm  comm.c  posixver.h
src/cp/: CMakeLists.txt  Makefile  Makefile.in  cp  cp.c  extern.h  utils.c
src/csplit/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  csplit  csplit.c  csplit.c.orig
src/cut/: CMakeLists.txt  Makefile  Makefile.in  cut  cut.c
src/date/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  date  date.c  date.c.orig
src/dd/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  args.c  conv.c  conv_tab.c  dd  dd.c  dd.h  extern.h  misc.c  position.c
src/df/: CMakeLists.txt  df.c  ext2fs_df.c  ffs_df.c
src/dirname/: CMakeLists.txt  Makefile  Makefile.in  dirname  dirname.c
src/du/: CMakeLists.txt  Makefile  Makefile.in  du  du.c
src/echo/: CMakeLists.txt  Makefile  Makefile.in  echo  echo.c
src/env/: CMakeLists.txt  Makefile  Makefile.in  env  env.c  env.c.orig
src/expand/: CMakeLists.txt  Makefile  Makefile.in  expand  expand.c
src/expr/: CMakeLists.txt  Makefile  Makefile.in  expr  expr.c
src/factor/: CMakeLists.txt  Makefile  Makefile.in  factor  factor.c  factor.c.orig  factor.c.rej  pattern.c  pr_tbl.c
src/false/: CMakeLists.txt  Makefile  Makefile.in  false  false.c
src/fmt/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  fmt  fmt.c
src/fold/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  fold  fold.c
src/head/: CMakeLists.txt  Makefile  Makefile.in  head  head.c
src/hexdump/: Makefile.am  conv.c  display.c  hexdump  hexdump.c  hexsyntax.c  odsyntax.c
src/id/: CMakeLists.txt  Makefile  Makefile.in  id  id.c
src/join/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  join  join.c
src/ln/: CMakeLists.txt  Makefile  Makefile.in  ln  ln.c
src/logname/: CMakeLists.txt  Makefile  Makefile.in  logname  logname.c  logname.c.orig
src/ls/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmp.c  extern.h  ls  ls.1  ls.c  ls.h  main.c  print.c  utf8.c  util.c
src/mkdir/: CMakeLists.txt  Makefile  Makefile.in  mkdir  mkdir.c
src/mknod/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  mknod  mknod.c
src/mktemp/: CMakeLists.txt  Makefile  Makefile.in  mktemp  mktemp.c
src/mv/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cp.c  mv  mv.c  rm.c
src/nice/: CMakeLists.txt  Makefile  Makefile.in  nice  nice.c  nice.c.orig
src/nl/: CMakeLists.txt  Makefile  Makefile.in  nl  nl.c  nl.c.orig
src/nohup/: CMakeLists.txt  Makefile  Makefile.in  nohup  nohup.c  nohup.c.orig
src/paste/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  paste  paste.c  paste.c.orig
src/pathchk/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  pathchk  pathchk.c
src/pr/: CMakeLists.txt  Makefile  Makefile.in  egetopt.c  extern.h  pr  pr.c  pr.h
src/printenv/: CMakeLists.txt  Makefile  Makefile.in  printenv  printenv.c
src/printf/: CMakeLists.txt  Makefile  Makefile.in  printf  printf.c  printf.c.orig
src/pwd/: CMakeLists.txt  Makefile  Makefile.in  pwd  pwd.c  pwd.c.orig
src/readlink/: CMakeLists.txt  Makefile  Makefile.in  readlink  readlink.c
src/realpath/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  realpath  realpath.c
src/rm/: CMakeLists.txt  Makefile  Makefile.in  rm  rm.c
src/rmdir/: CMakeLists.txt  Makefile  Makefile.in  rmdir  rmdir.c  rmdir.c.orig
src/sleep/: CMakeLists.txt  Makefile  Makefile.in  sleep  sleep.c
src/sort/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bwstring.c  bwstring.h  coll.c  coll.c.orig  coll.h  commoncrypto.c  commoncrypto.h  file.c  file.c.orig  file.h  mem.c  mem.h  radixsort.c  radixsort.h  sort  sort.c  sort.h  sort.h.orig  vsort.c  vsort.h
src/split/: CMakeLists.txt  Makefile  Makefile.in  split  split.c
src/stat/: CMakeLists.txt  Makefile  Makefile.in  stat  stat.c
src/stty/: CMakeLists.txt  Makefile  Makefile.in  cchar.c  extern.h  gfmt.c  key.c  modes.c  print.c  stty  stty.c  stty.h
src/sync/: CMakeLists.txt  Makefile  sync  (+2 more)
(+241 files in other folders)
