# Start with an empty list and conditionally expand it below.
SUBDIRS =

SUBDIRS += arch
SUBDIRS += basename
SUBDIRS += bsdvers
SUBDIRS += cat
SUBDIRS += chmod
SUBDIRS += chroot
SUBDIRS += colorls
SUBDIRS += comm
SUBDIRS += cp
SUBDIRS += csplit
SUBDIRS += cut
SUBDIRS += date
SUBDIRS += dd
SUBDIRS += dirname
SUBDIRS += du
SUBDIRS += echo
SUBDIRS += env
SUBDIRS += expand
SUBDIRS += expr
SUBDIRS += factor
SUBDIRS += false
SUBDIRS += fmt
SUBDIRS += fold
SUBDIRS += head
SUBDIRS += id
SUBDIRS += join
SUBDIRS += ln
SUBDIRS += logname
SUBDIRS += ls
SUBDIRS += mkdir
SUBDIRS += mknod
SUBDIRS += mktemp
SUBDIRS += mv
SUBDIRS += nice
SUBDIRS += nl
SUBDIRS += nohup
SUBDIRS += paste
SUBDIRS += pathchk
SUBDIRS += pr
SUBDIRS += printenv
SUBDIRS += printf
SUBDIRS += pwd
SUBDIRS += readlink
SUBDIRS += realpath
SUBDIRS += rm
SUBDIRS += rmdir
SUBDIRS += sleep
SUBDIRS += sort
SUBDIRS += split
SUBDIRS += stat
if LINUX
    SUBDIRS += stty
endif
SUBDIRS += sync
SUBDIRS += tee
SUBDIRS += test
SUBDIRS += touch
SUBDIRS += tr
SUBDIRS += true
SUBDIRS += tsort
SUBDIRS += tty
SUBDIRS += uname
SUBDIRS += unexpand
SUBDIRS += uniq
SUBDIRS += users
SUBDIRS += wc
SUBDIRS += who
SUBDIRS += xargs
if LINUX
    SUBDIRS += xinstall
endif
SUBDIRS += yes
