include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/manpage.cmake)

add_executable(cp cp.c utils.c)

target_link_libraries(cp PRIVATE compat)

INSTALL(TARGETS cp DESTINATION ${CMAKE_INSTALL_BINDIR})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cp.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cp.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)