add_executable(cut cut.c)

target_link_libraries(cut PRIVATE compat)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cut.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(TARGETS cut DESTINATION ${CMAKE_INSTALL_BINDIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cut.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)