add_executable(factor factor.c pattern.c pr_tbl.c)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/factor.6 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(TARGETS factor DESTINATION ${CMAKE_INSTALL_BINDIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/factor.6 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man6)