include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/manpage.cmake)

add_executable(false false.c)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/false.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(TARGETS false DESTINATION ${CMAKE_INSTALL_BINDIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/false.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)