add_executable(id id.c)

target_link_libraries(id PRIVATE compat)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/id.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/groups.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/whoami.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/id.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/groups.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/whoami.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

install_symlink(${CMAKE_INSTALL_PREFIX}/bin/id ${CMAKE_INSTALL_PREFIX}/bin/groups)
install_symlink(${CMAKE_INSTALL_PREFIX}/bin/id ${CMAKE_INSTALL_PREFIX}/sbin/whoami)