add_executable(ln ln.c)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/ln.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/symlink.7 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(TARGETS ln DESTINATION ${CMAKE_INSTALL_BINDIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/ln.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/symlink.7 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man7)