
add_executable(ln ln.c)

INSTALL(TARGETS ln DESTINATION ${CMAKE_INSTALL_BINDIR})

if(PROGRAM_PREFIX)
set_target_properties(ln PROPERTIES PREFIX ${PROGRAM_PREFIX})
endif()

FILE(GLOB MAN1_FILES *.1)
IF(MAN1_FILES)
    INSTALL(FILES ${MAN1_FILES} DESTINATION ${CMAKE_INSTALL_MANDIR}/man1 COMPONENT ManPages)
ENDIF()
FILE(GLOB MAN)

FILE(GLOB MAN7_FILES *.7)
IF(MAN7_FILES)
    INSTALL(FILES ${MAN7_FILES} DESTINATION ${CMAKE_INSTALL_MANDIR}/man7 COMPONENT ManPages)
ENDIF()
FILE(GLOB MAN)