add_executable(logname logname.c)

target_link_libraries(logname PRIVATE compat)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/logname.1 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(TARGETS logname DESTINATION ${CMAKE_INSTALL_BINDIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/logname.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)